--- a/src/EncCnvtrs/EncCnvtrs.csproj
+++ b/src/EncCnvtrs/EncCnvtrs.csproj
@@ -235,7 +235,7 @@
       <DependentUpon>TecAutoConfigDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="..\..\output\common\EC\Plugins\EC 4.0.0.0 Plugin Details.xml">
+    <Content Include="..\..\redist\EC\Plugins\EC 4.0.0.0 Plugin Details.xml">
       <Link>EC 4.0.0.0 Plugin Details.xml</Link>
     </Content>
     <Content Include="buildinclude.xml" />
