--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PYTHON_DEVEL
+EC_MONO_DEVEL
 
 AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([
