--- a/Makefile.in
+++ b/Makefile.in
@@ -6,10 +6,15 @@
 MAKEFLAGS=#--no-print-directory
 srcdir = @srcdir@
 VPATH  = @srcdir@
-
-SHELL = /bin/sh
+INSTALL     = @INSTALL@
+prefix      = @prefix@
+exec_prefix = @exec_prefix@
 
 SRCDIRS = src/IcuEC src/PyScriptEC src/ECDriver/linux
+DLLS    = ECInterfaces.dll SilEncConverters40.dll CodePageEC.dll CcEC.dll \
+  IcuEC.dll PyScriptEC.dll PerlExpressionEC.dll AIGuesserEC.dll
+LIBDIR  = $(exec_prefix)/lib/encConverters
+
 
 all:
 	@(cd build && nant) || true
@@ -32,3 +37,18 @@ distclean: clean
 	  (cd $$subdir && $(MAKE) distclean) || true; \
 	done
 	@rm -f Makefile config.cache src/config.h config.log config.status src/stamp-h1 autogen.err
+
+install:
+	@for subdir in $(SRCDIRS); do \
+	  echo installing in $$subdir; \
+	  (cd $$subdir && $(MAKE) install) || true; \
+	done
+	@for f in $(DLLS); do \
+	  $(INSTALL) output/Debug/$f $(LIBDIR)
+	done
+
+check: all
+	@for subdir in $(SRCDIRS); do \
+	  echo checking in $$subdir; \
+	  (cd $$subdir && $(MAKE) check) || true; \
+	done
