--- a/src/IcuEC/Makefile.in
+++ b/src/IcuEC/Makefile.in
@@ -14,6 +14,7 @@ BUILDDIR    = $(ROOTDIR)/build/Obj
 OUTDIR      = $(ROOTDIR)/output/Debug
 ECHEADERDIR=../EncCnvtrs/lib
 ECHEADER=$(ECHEADERDIR)/CEncConverter.h
+LIBDIR = $(exec_prefix)/lib/encConverters
 
 all: $(BUILDDIR) $(OUTDIR)/libIcuTranslitEC.so.1.0 $(OUTDIR)/libIcuRegexEC.so.1.0
 
@@ -47,3 +48,9 @@ clean:
 
 distclean: clean
 	rm -f Makefile
+
+install:
+	$(INSTALL) $(OUTDIR)/libIcuTranslitEC.so.1.0 $(LIBDIR)
+	$(INSTALL) $(OUTDIR)/libIcuRegexEC.so.1.0 $(LIBDIR)
+
+check:
