--- a/Makefile.in
+++ b/Makefile.in
@@ -9,6 +9,8 @@ VPATH  = @srcdir@
 INSTALL     = @INSTALL@
 prefix      = @prefix@
 exec_prefix = @exec_prefix@
+ROOTDIR     = @abs_top_srcdir@
+OUTDIR      = $(ROOTDIR)/output/Debug
 
 SRCDIRS = src/IcuEC src/PyScriptEC src/ECDriver/linux
 DLLS    = ECInterfaces.dll SilEncConverters40.dll CodePageEC.dll CcEC.dll \
@@ -43,8 +45,9 @@ install:
 	  echo installing in $$subdir; \
 	  (cd $$subdir && $(MAKE) install) || true; \
 	done
-	@for f in $(DLLS); do \
-	  $(INSTALL) output/Debug/$f $(LIBDIR)
+	@mkdir -p $(DESTDIR)$(LIBDIR)
+	@for file in $(DLLS); do \
+	  $(INSTALL) $(OUTDIR)/$$file $(DESTDIR)$(LIBDIR); \
 	done
 
 check: all
