--- a/Makefile.in
+++ b/Makefile.in
@@ -39,6 +39,7 @@ distclean: clean
 	  (cd $$subdir && $(MAKE) distclean) || true; \
 	done
 	@rm -f Makefile config.cache src/config.h config.log config.status src/stamp-h1 autogen.err
+	@rm -rf autom4te.cache
 
 install:
 	@for subdir in $(SRCDIRS); do \
