--- a/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<dllmap dll="IcuConvEC">		
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="Neutral" />
+				<bindingRedirect oldVersion="2.0.6.0" newVersion="2.2.8.0" />
+				<bindingRedirect oldVersion="2.1.4.0" newVersion="2.2.8.0" />
+				<bindingRedirect oldVersion="2.4.7.0" newVersion="2.2.8.0" />
+				<bindingRedirect oldVersion="2.4.8.0" newVersion="2.2.8.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<dllmap dll="IcuConvEC">
 		<dllentry os="linux" dll="libIcuConvEC.so.1.0"/>
 	</dllmap>
-	<dllmap dll="IcuRegexEC">		
+	<dllmap dll="IcuRegexEC">
 		<dllentry os="linux" dll="libIcuRegexEC.so.1.0"/>
 	</dllmap>
-	<dllmap dll="IcuTranslitEC">		
+	<dllmap dll="IcuTranslitEC">
 		<dllentry os="linux" dll="libIcuTranslitEC.so.1.0"/>
 	</dllmap>
 </configuration>
