--- a/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
@@ -8,6 +8,7 @@
 				<bindingRedirect oldVersion="2.1.4.0" newVersion="2.2.8.0" />
 				<bindingRedirect oldVersion="2.4.7.0" newVersion="2.2.8.0" />
 				<bindingRedirect oldVersion="2.4.8.0" newVersion="2.2.8.0" />
+				<bindingRedirect oldVersion="2.5.10.0" newVersion="2.2.8.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
