--- a/src/TestEncCnvtrs/TestEncCnvtrs.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.csproj
@@ -42,9 +42,10 @@
     <Compile Include="TestEncConverters.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+    <Reference Include="nunit.framework">
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\usr\lib\mono\gac\nunit.framework\2.5.10.0__96d09a1eb7f44a77\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="SilEncConverters40">
