Add unit tests for ICU.regex type converters.

--- a/src/TestEncCnvtrs/TestEncCnvtrs.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.csproj
@@ -41,6 +41,7 @@
     <Compile Include="TestIcuConvEncConverter.cs" />
     <Compile Include="TestEncConverters.cs" />
     <Compile Include="TestIcuTranslit.cs" />
+    <Compile Include="TestIcuRegex.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="nunit.framework">
