--- a/Makefile.in
+++ b/Makefile.in
@@ -48,8 +48,9 @@ distclean: clean
 	  echo making in $$subdir; \
 	  (cd $$subdir && $(MAKE) distclean) || true; \
 	done
-	@rm -f Makefile config.cache src/config.h config.log config.status src/stamp-h1 autogen.err
-	@rm -rf autom4te.cache output build/Obj
+	@rm -f Makefile config.cache src/config.h config.log config.status src/stamp-h1
+	@rm -f autogen.err TestResult.xml
+	@rm -rf autom4te.cache output build/Obj src/TestEncCnvtrs/test-results
 
 install:
 	@for subdir in $(SRCDIRS); do \
