Provide C# methods for getting lists of ICU converters and transliterators, and fix tests to use them.  Minor fixes to a couple of Makefiles.

--- a/src/ECDriver/linux/Makefile.in
+++ b/src/ECDriver/linux/Makefile.in
@@ -29,6 +29,7 @@ $(OUTDIR)/libecdriver.so.1.0: $(BUILDDIR)/ECDriver.o
 	g++ -shared -Wl,-soname,libecdriver.so.1 \
   -o $(OUTDIR)/libecdriver.so.1.0 $(BUILDDIR)/ECDriver.o \
   $(MONO_LDFLAGS) -lmono-2.0
+	rm -f  $(OUTDIR)/libecdriver.so $(OUTDIR)/libecdriver.so.1
 	ln -s libecdriver.so.1.0 $(OUTDIR)/libecdriver.so.1
 	ln -s libecdriver.so.1.0 $(OUTDIR)/libecdriver.so
 
