Rename PyScriptEncConverter.dll.config to PyScriptEC.dll.config (which is what its name should have been all along).

--- a/src/PyScriptEC/Makefile.in
+++ b/src/PyScriptEC/Makefile.in
@@ -25,7 +25,7 @@ $(BUILDDIR):
 	mkdir -p $(BUILDDIR)
 	mkdir -p $(OUTDIR)
 
-$(OUTDIR)/libPyScriptEncConverter.so.1.0: $(BUILDDIR)/PyScriptEncConverter.o $(OUTDIR)/PyScriptEncConverter.dll.config
+$(OUTDIR)/libPyScriptEncConverter.so.1.0: $(BUILDDIR)/PyScriptEncConverter.o $(OUTDIR)/PyScriptEC.dll.config
 	g++ -shared -Wl,-soname,libPyScriptEncConverter.so.1 \
   -o $(OUTDIR)/libPyScriptEncConverter.so.1.0 \
   $(BUILDDIR)/PyScriptEncConverter.o $(PYTHON_LDFLAGS)
@@ -38,8 +38,8 @@ $(BUILDDIR)/PyScriptEncConverter.o: PyScriptEncConverter.cpp PyScriptEncConverte
   -o $(BUILDDIR)/PyScriptEncConverter.o \
   $(PYTHON_CPPFLAGS) -I$(ECHEADERDIR)
 
-$(OUTDIR)/PyScriptEncConverter.dll.config: PyScriptEncConverter.dll.config
-	cp -p PyScriptEncConverter.dll.config $(OUTDIR)
+$(OUTDIR)/PyScriptEC.dll.config: PyScriptEC.dll.config
+	cp -p PyScriptEC.dll.config $(OUTDIR)
 
 clean:
 	rm -f *~
@@ -52,6 +52,6 @@ distclean: clean
 install:
 	mkdir -p $(DESTDIR)$(LIBDIR)
 	$(INSTALL) $(OUTDIR)/libPyScriptEncConverter.so.1.0 $(DESTDIR)$(LIBDIR)
-	$(INSTALL) $(OUTDIR)/PyScriptEncConverter.dll.config $(DESTDIR)$(LIBDIR)
+	$(INSTALL) $(OUTDIR)/PyScriptEC.dll.config $(DESTDIR)$(LIBDIR)
 
 check:
